--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -274,7 +274,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="53-house.png" id="pQo-Ge-rJz"/>
                     <navigationItem key="navigationItem" id="x2l-Gw-3qv"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="sentinelImage" destination="yF6-jN-CcU" id="RPw-Of-PwX"/>
                         <outlet property="webView" destination="UaM-J0-mXF" id="ana-nF-8HO"/>
@@ -464,7 +463,7 @@
                                             <action selector="buttonPressed:" destination="vk2-jd-J1u" id="028-17-eTk"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="77" style="plain" systemItem="fixedSpace" id="dgR-uL-M9j"/>
+                                    <barButtonItem width="83" style="plain" systemItem="fixedSpace" id="dgR-uL-M9j"/>
                                     <barButtonItem tag="1" title="◄" id="cB4-Ur-gv3">
                                         <connections>
                                             <action selector="buttonPressed:" destination="vk2-jd-J1u" id="bzX-lQ-BpW"/>
