--- a/Sentinel/WebsiteDetailViewController.xib
+++ b/Sentinel/WebsiteDetailViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -21,6 +21,29 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </webView>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="9eu-2F-ePC">
+                    <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <items>
+                        <barButtonItem systemItem="refresh" id="0lu-LJ-jYD">
+                            <connections>
+                                <action selector="refresh:" destination="-2" id="nak-ON-FPX"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem width="74" style="plain" systemItem="fixedSpace" id="JRL-Q3-myZ"/>
+                        <barButtonItem title="◄" id="y1I-SX-wJ3">
+                            <connections>
+                                <action selector="goBack:" destination="-2" id="2az-U8-f2H"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem width="30" style="plain" systemItem="fixedSpace" id="UV4-By-0mo"/>
+                        <barButtonItem title="►" id="ms5-qa-z78">
+                            <connections>
+                                <action selector="goForward:" destination="-2" id="YhI-IV-op9"/>
+                            </connections>
+                        </barButtonItem>
+                    </items>
+                </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
