--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -274,6 +274,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="53-house.png" id="pQo-Ge-rJz"/>
                     <navigationItem key="navigationItem" id="x2l-Gw-3qv"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="sentinelImage" destination="yF6-jN-CcU" id="RPw-Of-PwX"/>
                         <outlet property="webView" destination="UaM-J0-mXF" id="ana-nF-8HO"/>
@@ -444,7 +445,7 @@
                                             <action selector="buttonPressed:" destination="vk2-jd-J1u" id="028-17-eTk"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="83" style="plain" systemItem="fixedSpace" id="dgR-uL-M9j"/>
+                                    <barButtonItem width="77" style="plain" systemItem="fixedSpace" id="dgR-uL-M9j"/>
                                     <barButtonItem tag="1" title="◄" id="cB4-Ur-gv3">
                                         <connections>
                                             <action selector="buttonPressed:" destination="vk2-jd-J1u" id="bzX-lQ-BpW"/>
